@@ -37,10 +37,14 @@ L["Set popup key desc"] = "Lege die Taste zum Zeigen der Popup-Button fest"
 L["Hide minimap icon"] =  "Verstecke Minimap-Symbol"
 L["Hide minimap icon desc"] =  "Verstecke das Minimap-Symbol"
 L["key already bind"] = "Taste war gebunden an: "
-L["Select set"] = "Select set"
-	L["Select set desc"] = "Select the totem set"
-	L["Save set"] = "Save set"
-	L["Create new set"] = "Create new set"
+L["Select set"] = "Set auswählen"
+L["Select set desc"] = "Wähle Totemset aus"
+L["Save set"] = "Speichere Set"
+L["Create new set"] = "Erstelle neues Set"
+L["Delete set"] = "L\195\182sche Set"
+L["Profile cannot be changed in combat"] = "Profil kann im Kampf nicht geändert werden"
+L["Cannot delete profile"] = "Kann das Profil nicht löschen"
+L["Delete profile - "] = "Lösche Profil - "
 
 	L["Hides the default mainbar"] = "Versteckt die Standard Buttonleiste"
 	L["Button Lock"] = "Kn\195\182pfe sperren"
